CustomerController, CustomerRepository, ProductController ve ProductRepository de değişiklikler yapıldı **ProductController'da yapılan değişiklikler** --- - **onDelete'de**    1. Alert'te Customer olarak kalmış Product olarak değiştirdim
- **onSave'de**
   1. productId için regex kullanarak sadece digit girilebilir yaptım

- **onUpdate'de**
   1. productId için regex kullanarak sadece digit girilebilir yaptım

**CustomerRepository'de yapılan değişiklikler**
---
- **isUpdated**
   1. isupdated isminde, verilen customer'ın bilgilerinde değişiklik olup olmadığını kontrol eden bir metot oluşturuldu.

- **saveCustomer'da**
   1. parametreler arasına customerId eklendi.
   2. insert statement'a customerId eklendi.

- **updateCustomer'da**
   1. isUpdated metotdu kullanıldı customer'ın update edilip edilmediği sorgu çalışmadan önce kontrol edilebilir hale getirildi.

**CustomerRepository'de yapılan değişiklikler**
- **onSave**
   1. CustomerId formdan alınır hale getirildi ve integer olup olmadığı regex ile kontrol edilir getirildi.
   2. isSuccess in false olduğu durumda kullanıcıya id si olmayan kullanıcıya erişmeye çalıştığıyla ilgili geri bildirimde bulunur hale getirildi.

- **onUpdate**
   1. CustomerId formdan alınır hale getirildi ve integer olup olmadığı regex ile kontrol edilir getirildi.
   2. isSuccess in false olduğu durumda kullanıcıya id si olmayan kullanıcıya erişmeye çalıştığıyla ilgili geri bildirimde bulunur hale getirildi.
   3. Eğer form'da herhangi bir değişiklik yapılmamasına rağmen update butonuna basıldığında kullanıcıya veritabanında herhangi bir değişiklik olmadığına dahil bir warning verildi.